Update swagger file and API types
