# src/api/types.ts
@@ -22,12 +22,46 @@ export interface Cluster {
   kind: 'image' | 'host' | 'cluster';
   id: string; // uuid
   href: string; // uri
+  /**
+   * OpenShift cluster name
+   */
   name?: string;
+  /**
+   * OpenShift cluster version
+   */
   openshiftVersion?: string; // ^4\.\d$
+  /**
+   * The base domain of the cluster. All DNS records must be sub-domains of this base and include the cluster name.
+   */
   baseDnsDomain?: string;
+  /**
+   * IP address block from which Pod IPs are allocated This block must not overlap with existing physical networks. These IP addresses are used for the Pod network, and if you need to access the Pods from an external network, configure load balancers and routers to manage the traffic.
+   */
+  clusterNetworkCIDR?: string; // ^([0-9]{1,3}\.){3}[0-9]{1,3}\/[0-9]|[1-2][0-9]|3[0-2]?$
+  /**
+   * The subnet prefix length to assign to each individual node. For example, if clusterNetworkHostPrefix is set to 23, then each node is assigned a /23 subnet out of the given cidr (clusterNetworkCIDR), which allows for 510 (2^(32 - 23) - 2) pod IPs addresses. If you are required to provide access to nodes from an external network, configure load balancers and routers to manage the traffic.
+   */
+  clusterNetworkHostPrefix?: number;
+  /**
+   * The IP address pool to use for service IP addresses. You can enter only one IP address pool. If you need to access the services from an external network, configure load balancers and routers to manage the traffic.
+   */
+  serviceNetworkCIDR?: string; // ^([0-9]{1,3}\.){3}[0-9]{1,3}\/[0-9]|[1-2][0-9]|3[0-2]?$
+  /**
+   * Virtual IP used to reach the OpenShift cluster API
+   */
   apiVip?: string; // hostname
+  /**
+   * Virtual IP used internally by the cluster for automating internal DNS requirements
+   */
   dnsVip?: string; // hostname
+  /**
+   * Virtual IP used for cluster ingress traffic
+   */
   ingressVip?: string; // hostname
+  /**
+   * The pull secret that obtained from the Pull Secret page on the Red Hat OpenShift Cluster Manager site
+   */
+  pullSecret?: string;
   /**
    * SSH public key for debugging OpenShift nodes
    */
@@ -35,16 +69,51 @@ export interface Cluster {
   status: 'creating' | 'ready' | 'error';
   hosts?: Host[];
   updatedAt?: string; // date-time
+  createdAt?: string; // date-time
   installStartedAt?: string; // date-time
   installCompletedAt?: string; // date-time
 }
 export interface ClusterCreateParams {
+  /**
+   * OpenShift cluster name
+   */
   name: string;
+  /**
+   * OpenShift cluster version
+   */
   openshiftVersion?: string; // ^4\.\d$
+  /**
+   * The base domain of the cluster. All DNS records must be sub-domains of this base and include the cluster name.
+   */
   baseDnsDomain?: string;
+  /**
+   * IP address block from which Pod IPs are allocated This block must not overlap with existing physical networks. These IP addresses are used for the Pod network, and if you need to access the Pods from an external network, configure load balancers and routers to manage the traffic.
+   */
+  clusterNetworkCIDR?: string; // ^([0-9]{1,3}\.){3}[0-9]{1,3}\/[0-9]|[1-2][0-9]|3[0-2]?$
+  /**
+   * The subnet prefix length to assign to each individual node. For example, if clusterNetworkHostPrefix is set to 23, then each node is assigned a /23 subnet out of the given cidr (clusterNetworkCIDR), which allows for 510 (2^(32 - 23) - 2) pod IPs addresses. If you are required to provide access to nodes from an external network, configure load balancers and routers to manage the traffic.
+   */
+  clusterNetworkHostPrefix?: number;
+  /**
+   * The IP address pool to use for service IP addresses. You can enter only one IP address pool. If you need to access the services from an external network, configure load balancers and routers to manage the traffic.
+   */
+  serviceNetworkCIDR?: string; // ^([0-9]{1,3}\.){3}[0-9]{1,3}\/[0-9]|[1-2][0-9]|3[0-2]?$
+  /**
+   * Virtual IP used to reach the OpenShift cluster API
+   */
   apiVip?: string; // hostname
+  /**
+   * Virtual IP used internally by the cluster for automating internal DNS requirements
+   */
   dnsVip?: string; // hostname
+  /**
+   * Virtual IP used for cluster ingress traffic
+   */
   ingressVip?: string; // hostname
+  /**
+   * The pull secret that obtained from the Pull Secret page on the Red Hat OpenShift Cluster Manager site
+   */
+  pullSecret?: string;
   /**
    * SSH public key for debugging OpenShift nodes
    */
@@ -52,12 +121,46 @@ export interface ClusterCreateParams {
 }
 export type ClusterList = Cluster[];
 export interface ClusterUpdateParams {
+  /**
+   * OpenShift cluster name
+   */
   name?: string;
+  /**
+   * OpenShift cluster version
+   */
   openshiftVersion?: string; // ^4\.\d$
+  /**
+   * The base domain of the cluster. All DNS records must be sub-domains of this base and include the cluster name.
+   */
   baseDnsDomain?: string;
+  /**
+   * IP address block from which Pod IPs are allocated This block must not overlap with existing physical networks. These IP addresses are used for the Pod network, and if you need to access the Pods from an external network, configure load balancers and routers to manage the traffic.
+   */
+  clusterNetworkCIDR?: string; // ^([0-9]{1,3}\.){3}[0-9]{1,3}\/[0-9]|[1-2][0-9]|3[0-2]?$
+  /**
+   * The subnet prefix length to assign to each individual node. For example, if clusterNetworkHostPrefix is set to 23, then each node is assigned a /23 subnet out of the given cidr (clusterNetworkCIDR), which allows for 510 (2^(32 - 23) - 2) pod IPs addresses. If you are required to provide access to nodes from an external network, configure load balancers and routers to manage the traffic.
+   */
+  clusterNetworkHostPrefix?: number;
+  /**
+   * The IP address pool to use for service IP addresses. You can enter only one IP address pool. If you need to access the services from an external network, configure load balancers and routers to manage the traffic.
+   */
+  serviceNetworkCIDR?: string; // ^([0-9]{1,3}\.){3}[0-9]{1,3}\/[0-9]|[1-2][0-9]|3[0-2]?$
+  /**
+   * Virtual IP used to reach the OpenShift cluster API
+   */
   apiVip?: string; // hostname
+  /**
+   * Virtual IP used internally by the cluster for automating internal DNS requirements
+   */
   dnsVip?: string; // hostname
+  /**
+   * Virtual IP used for cluster ingress traffic
+   */
   ingressVip?: string; // hostname
+  /**
+   * The pull secret that obtained from the Pull Secret page on the Red Hat OpenShift Cluster Manager site
+   */
+  pullSecret?: string;
   /**
    * SSH public key for debugging OpenShift nodes
    */
@@ -110,8 +213,8 @@ export interface Host {
     | 'disabled'
     | 'installing'
     | 'installed';
-  statusInfo: string;
-  connectivity: ConnectivityReport;
+  statusInfo?: string;
+  connectivity?: ConnectivityReport;
   hardware_info?: Introspection;
   role?: 'undefined' | 'master' | 'worker';
   updatedAt?: string; // date-time
